duniverse/menhirLib.20200211/test/static/bad/arity-error.mly
%token FOO BAR

%%

a(X):
  x = X { x }

foo:
  a(FOO) a(BAR,BAR) { () }
