duniverse/menhirLib.20200211/test/static/bad/arity-error.exp
File "arity-error.mly", line 9, characters 9-10:
Error: does the symbol "a" expect 1 or 2 arguments?
